--- a/word-speech.ipynb
+++ b/word-speech.ipynb
@@ -43,7 +43,7 @@
    "outputs": [],
    "source": [
     "#Save your each sample of data to array in .npy formate\n",
-    "#save_data_to_array()"
+    "save_data_to_array()"
    ]
   },
   {
